Refactoring CV usage and using direct buffers